--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -13,7 +13,10 @@ jobs:
     - name: tshirts fail
       run: |
         g++ -Wall -Wextra -Werror tshirts.c -o tshirts.out
-
+        
+    - name : run
+      run: ./tshirts
+      
     - name: misaligned fail
       run: |
         g++ -Wall -Wextra -Werror misaligned.c -o misaligned.out
